test/asm/inject/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: istiod-asm
webhooks:
  # name, service.name, and istio-env should be identical for consistency.
  # You can customize this with additional match criteria - including making it a cluster-global.
  # Since it's a small file, it's easier to just create your own variant instead of patching. 
  - name: sidecar-injector.istio.io
    clientConfig:
      service:
        name: istiod-asm
        namespace: istio-system
        path: "/inject"
      caBundle: ""
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        istio-env: istiod-asm
