test/asm/inject/patch.yaml
# This needs to be automated by the patch - service name and env label are all based on the label.
# Note that istiod name gets translated
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: istiod
webhooks:
  - name: sidecar-injector.istio.io
    clientConfig:
      service:
        name: istiod-asm
    namespaceSelector:
      matchLabels:
        istio-env: istiod-asm
